SQL Database1.txt
Python 3.13.2 (tags/v3.13.2:4f8bb39, Feb  4 2025, 15:23:48) [MSC v.1942 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> blackberry_sql_project/
  File "<python-input-0>", line 1
    blackberry_sql_project/
                           ^
SyntaxError: invalid syntax
>>> ├── database/
  File "<python-input-1>", line 1
    ├── database/
    ^
SyntaxError: invalid character '├' (U+251C)
>>> │   └── init_db.py
  File "<python-input-2>", line 1
    │   └── init_db.py
    ^
SyntaxError: invalid character '│' (U+2502)
>>> ├── data/
  File "<python-input-3>", line 1
    ├── data/
    ^
SyntaxError: invalid character '├' (U+251C)
>>> │   └── example_data.sql (optional)
  File "<python-input-4>", line 1
    │   └── example_data.sql (optional)
    ^
SyntaxError: invalid character '│' (U+2502)
>>> ├── README.md
  File "<python-input-5>", line 1
    ├── README.md
    ^
SyntaxError: invalid character '├' (U+251C)
>>> ├── requirements.txt
  File "<python-input-6>", line 1
    ├── requirements.txt
    ^
SyntaxError: invalid character '├' (U+251C)
>>> └── .gitignore
  File "<python-input-7>", line 1
    └── .gitignore
    ^
SyntaxError: invalid character '└' (U+2514)
>>>
